--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .slidecontainer {
+                width: 100%;
+            }
+
+            .slider {
+                -webkit-appearance: none;
+                width: 100%;
+                height: 25px;
+                background: #d3d3d3;
+                outline: none;
+                opacity: 0.7;
+                -webkit-transition: 0.2s;
+                transition: opacity 0.2s;
+            }
+
+            .slider:hover {
+                opacity: 1;
+            }
+
+            .slider::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                appearance: none;
+                width: 25px;
+                height: 25px;
+                background: #04aa6d;
+                cursor: pointer;
+            }
+
+            .slider::-moz-range-thumb {
+                width: 25px;
+                height: 25px;
+                background: #04aa6d;
+                cursor: pointer;
+            }
+        </style>
     </head>
     <body>
-        <button class="clicknow">hello</button>
-        <button class="clicknow2">hello</button>
-        <script src="./script.js"></script>
+        <h1>Custom Range Slider</h1>
+
+        <div class="slidecontainer">
+            <p>Default range slider:</p>
+            <input type="range" min="1" max="100" value="50" />
+
+            <p>Custom range slider:</p>
+            <input
+                type="range"
+                min="0"
+                max="1"
+                value="0.2"
+                class="slider"
+                id="myRange"
+            />
+        </div>
     </body>
 </html>
