--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
                 id="myRange"
             />
         </div>
-        <p>helk</p>
+        <p>helli siime</p>
     </body>
 </html>
